# winkers

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_28032026.md  CONCEPT.md  CONTRIBUTING.md  ISSUES_run_I9_observations.md  ISSUE_impact_literal_blind.md  LICENSE  README.md  TASK_28032026.md  TASK_session_recording_signals.md  TODO.md  pyproject.toml  verify_v075.md
.claude/: settings.json
.github/workflows/: ci.yml
examples/: claude_code_setup.md  cursor_setup.md  demo_output.json
scripts/: VPS_DEPLOY.md  bench_tickets.py  build_units.py  coverage_chp.py  demo_audit_material.py  demo_couplings.py  embed_units.py  inspect_data_units.py  inspect_units.py  sanity_search.py  smoke_find_work_area.py  spike_chp_js.py  spike_phase3_audit.py  spike_self_attr.py  test_couplings_cli.py  units_manual.py  vps_recon.py
skills/intent_eval/: SKILL.md
src/winkers/: __init__.py  analyzer.py  class_attrs.py  commit_format.py  conventions.py  debt.py  detectors.py  expressions.py  git.py  graph.py  insights_store.py  models.py  parser.py  project.py  project_config.py  protect.py  recorder.py  resolver.py  rules.py  scoring.py  search.py  semantic.py  session_store.py  store.py  target_resolution.py  ui_map.py  value_locked.py  version_check.py
src/winkers/audit/: __init__.py  prompts.py  runner.py  selector.py
src/winkers/cli/: debug_group.py  hook_group.py  intent_group.py  main.py
src/winkers/cli/commands/: __init__.py  analyze.py  conventions.py  couplings.py  dashboard.py  describe.py  doctor.py  dupes.py  git_cmds.py  impact.py  improve.py  init.py  protect.py  record.py  search.py  serve.py
src/winkers/cli/init_pipeline/: __init__.py  bootstrap.py  install.py  pipelines.py  semantic.py  units.py
src/winkers/dashboard/: __init__.py  api.py
src/winkers/dashboard/handlers/: __init__.py  constraints.py  data.py  graph.py  rules.py  sessions.py
src/winkers/dashboard/static/: index.html
src/winkers/data_files/: __init__.py  scanner.py
src/winkers/descriptions/: __init__.py  aggregator.py  author.py  models.py  prompts.py  store.py  translator.py
src/winkers/detection/: duplicates.py  impact.py
src/winkers/embeddings/: __init__.py  builder.py
src/winkers/hooks/: _debounce.py  _logger.py  post_write.py  pre_write.py  prompt_enrich.py  session_audit.py  session_start.py  stop_audit.py
src/winkers/impact/: __init__.py  generator.py  models.py  prompt.py  store.py
src/winkers/intent/: eval_cli.py  provider.py
src/winkers/languages/: __init__.py  base.py  csharp.py  go.py  java.py  javascript.py  python.py  rust.py  typescript.py
src/winkers/mcp/: server.py  tools.py
src/winkers/mcp/tools/: __init__.py  _common.py  before_create.py  browse.py  convention_read.py  find_work_area.py  impact_check.py  orient.py  rule_read.py  scope.py  session_done.py
src/winkers/session/: audit.py  seen_units.py  session_dir.py  state.py
src/winkers/templates/: scanner.py
src/winkers/templates/claude_code/: claude_md_snippet.md  subagent.yaml
src/winkers/templates/claude_code/skill/: SKILL.md
src/winkers/templates/cursor/: winkers.mdc
src/winkers/templates/generic/: AGENTS.md
tests/: conftest.py  test_analyzer.py  test_audit_hooks.py  test_audit_prompts.py  test_audit_selector.py  test_audit_wave6.py  test_class_attrs.py  test_cleanup_legacy.py  test_cli.py  test_commit_format.py  test_conventions.py  test_dashboard.py  test_data_files.py  test_descriptions_aggregator.py  test_descriptions_meta_units.py  test_descriptions_models.py  test_descriptions_store.py  test_detectors.py  test_duplicates.py  test_e2e.py  test_embeddings_builder.py  test_expressions.py  test_find_work_area.py  test_graph.py  test_hooks.py  test_impact.py  test_impact_analysis.py  test_improve.py  test_intent.py  test_languages.py  test_models.py  test_parser.py  test_phase1.py  test_post_write_debounce.py  test_project_config.py  test_project_store.py  test_protect.py  test_recorder.py  test_resolver.py  test_rules.py  (+15 more)
tests/fixtures/csharp_project/: Inventory.cs  Pricing.cs
tests/fixtures/detector_project/app/models/: base.py  invoice.py  payment.py  user.py
tests/fixtures/detector_project/app/routes/: invoices.py  payments.py  users.py
tests/fixtures/detector_project/app/utils/: dates.py  errors.py
tests/fixtures/detector_project/tests/: conftest.py
tests/fixtures/flask_project/: app.py
tests/fixtures/flask_project/templates/: index.html
tests/fixtures/flask_project/templates/products/: list.html
tests/fixtures/go_project/inventory/: inventory.go
tests/fixtures/go_project/pricing/: pricing.go
tests/fixtures/java_project/src/main/java/com/example/: Inventory.java  Pricing.java
tests/fixtures/python_oop/repos/: audit_log.py  client.py
tests/fixtures/python_oop/services/: audit.py
tests/fixtures/python_project/: models.py
tests/fixtures/python_project/api/: prices.py
tests/fixtures/python_project/modules/: inventory.py  pricing.py
tests/fixtures/rust_project/src/: inventory.rs  pricing.rs
tests/fixtures/typescript_project/src/: inventory.ts  pricing.ts
tests/fixtures/typescript_project/src/api/: prices.ts
tests/fixtures/value_locked_project/: caller.py  status.py
