[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winkers"
version = "0.8.4"
description = "Architectural context layer for AI coding agents — function-level dependency graph via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "n1cke1" }]
keywords = ["mcp", "ai", "code-analysis", "dependency-graph", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "snowballstemmer>=2.2",
    "numpy>=1.24",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
semantic = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/n1cke1/winkers"
Repository = "https://github.com/n1cke1/winkers"
Issues = "https://github.com/n1cke1/winkers/issues"

[project.scripts]
winkers = "winkers.cli.main:cli"

# Pin torch to the CPU-only PyPI index for non-macOS hosts. Default PyPI
# torch wheels pull ~5 GiB of nvidia-* CUDA dependencies, which winkers
# never uses (BGE-M3 inference is CPU-only by design — see embeddings/
# builder.py). macOS torch wheels are CPU/MPS, so we leave them on the
# default index. Only honored by uv (uvx, uv pip); plain pip ignores
# this — see the README install section.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system != 'Darwin'" },
]

[tool.hatch.build.targets.wheel]
packages = ["src/winkers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
